added api call for room availability
